--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,6 +77,10 @@ services:
             - ./nifi/logs:/opt/nifi/nifi-current/logs
             - ./nifi/jdbc:/opt/nifi/nifi-current/jdbc
             - ./nifi/credentials:/opt/nifi/nifi-current/credentials
+            # mount host path for reading/writing sample data:
+            - ./nifi/sample_data:/opt/nifi/nifi-current/sample_data
+            # mount host path for reading sample dataflows templates:
+            - ./nifi/sample_dataflows:/opt/nifi/nifi-current/sample                
         environment:
             - NIFI_WEB_HTTP_PORT=8080
             - NIFI_CLUSTER_IS_NODE=true
